package kr.kkiro.javastone.game;

public enum CardType {
  MINION,
  SPELL,
  SECRET;
}
