package kr.kkiro.javastone.game;

public class Session {

}
